<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="320dp"
        android:layout_height="298dp"
        android:layout_margin="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/bg_custom"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="70dp"
        tools:ignore="MissingConstraints">

        <CalendarView
            android:id="@+id/calendarView2"
            android:layout_width="215dp"
            android:layout_height="217dp"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_m_sched"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_click"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="43dp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="89dp"
            android:layout_height="31dp"
            android:background="@drawable/bg_round"
            android:text="@string/quick_sched"
            android:textSize="11sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck,TextContrastCheck"
            tools:layout_editor_absoluteX="214dp"
            tools:layout_editor_absoluteY="16dp"
            tools:textColor="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button18"
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bg_round2"
        android:elevation="10dp"
        android:gravity="center|top"
        android:paddingTop="10dp"
        android:text="@string/man_routin"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button16"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck,TextContrastCheck"
        tools:layout_editor_absoluteX="216dp"
        tools:textColor="@color/white" />

    <Button
        android:id="@+id/button17"
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bg_round2"
        android:elevation="10dp"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/man_sched"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button16"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck,TextContrastCheck"
        tools:layout_editor_absoluteX="45dp"
        tools:textColor="@color/white" />

    <Button
        android:id="@+id/button14"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/bg_round"
        android:elevation="10dp"
        android:text="@string/recent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck,TextContrastCheck"
        tools:layout_editor_absoluteY="624dp"
        tools:textColor="@color/white" />

    <Button
        android:id="@+id/button16"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/bg_round"
        android:elevation="10dp"
        android:text="@string/man_alarm"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck,TextContrastCheck"
        tools:layout_editor_absoluteY="557dp"
        tools:textColor="@color/white" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name2"
        android:textColor="#2196F3"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>