<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/back"
        android:textColor="#FFFCFC"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/next"
        android:textColor="#FFFCFC"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="420dp"
        android:layout_height="676dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/bg_custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="54dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="272dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/info_confirm"
            android:textColor="#474343"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="74dp"
            tools:layout_editor_absoluteY="45dp" />

        <ProgressBar
            android:id="@+id/progressBar6"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="300dp"
            android:layout_height="10dp"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="101dp"
            tools:ignore="MissingConstraints" />

        <ProgressBar
            android:id="@+id/progressBar7"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="300dp"
            android:layout_height="7dp"
            android:background="#3F51B5"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="101dp" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/info_confirm2"
            android:textColor="@color/black"
            android:textSize="17sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="124dp" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="237dp"
            android:layout_height="62dp"
            android:gravity="center"
            android:text="@string/info_confirm3"
            android:textColor="@color/black"
            android:textSize="13sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="92dp"
            tools:layout_editor_absoluteY="559dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#EADD6D"
            app:srcCompat="@android:drawable/stat_sys_warning"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="576dp"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>